--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"cheerio": "^1.0.0",
+		"css": "^3.0.0",
 		"dotenv": "^16.4.5",
+		"htmlparser2": "^9.1.0",
 		"js-cookie": "^3.0.5",
+		"jsdom": "^25.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^6.26.2"
+		"react-router-dom": "^6.26.2",
+		"xmlbuilder2": "^3.1.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@types/cheerio": "^0.22.35",
+		"@types/css": "^0.0.38",
 		"@types/js-cookie": "^3.0.6",
+		"@types/jsdom": "^21.1.7",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
@@ -31,7 +39,7 @@
 		"postcss": "^8.4.47",
 		"prettier": "3.3.3",
 		"tailwindcss": "^3.4.13",
-		"typescript": "^5.5.3",
+		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.0.1",
 		"vite": "^5.4.1"
 	}
